--- a/post.html
+++ b/post.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,10 +8,11 @@
 <style>
 body { font-family:'Georgia', serif; background:linear-gradient(135deg,#667eea,#764ba2); color:#333; padding:50px; min-height:100vh; }
 .container { max-width:800px; margin:0 auto; background:white; padding:40px; border-radius:20px; box-shadow:0 10px 30px rgba(0,0,0,0.2); }
-h1 { font-size:2.5em; margin-bottom:20px; }
+h1 { font-size:2.5em; margin-bottom:20px; color:#667eea; }
 p.date { color:#999; font-size:0.9em; margin-bottom:30px; }
-p.content { font-size:1.2em; line-height:1.8; }
-a { display:inline-block; margin-top:30px; text-decoration:none; color:#667eea; }
+p.content { font-size:1.2em; line-height:1.8; white-space:pre-wrap; }
+a { display:inline-block; margin-top:30px; text-decoration:none; color:#667eea; font-weight:bold; }
+a:hover { color:#764ba2; }
 </style>
 </head>
 <body>
@@ -20,33 +22,36 @@ a { display:inline-block; margin-top:30px; text-decoration:none; color:#667eea; 
 <p class="content" id="post-content"></p>
 <a href="index.html">← Back to all posts</a>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const SUPABASE_URL="https://zqmgtnnwrceagkshfapq.supabase.co";
-const SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpxbWd0bm53cmNlYWdrc2hmYXBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY3MDI2ODgsImV4cCI6MjA4Mjc4Njg4fQ.Ql5KP6nfOSRzz1Z2eyN6WTqDsfVwZ0e9GKIbePa9eZE";
+const SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpxbWd0bm53cmNlYWdrc2hmYXBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY3MDI2ODgsImV4cCI6MjA4MjI3ODY4OH0.Ql5KP6nfOSRzz1Z2eyN6WTqDsfVwZ0e9GKIbePa9eZE";
 const sb = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-// Get post ID from URL
 const params = new URLSearchParams(window.location.search);
 const postId = params.get('id');
-
 async function loadPost() {
     if(!postId){
         document.getElementById('post-title').textContent = "Post not found";
+        document.getElementById('post-content').textContent = "No post ID provided in URL.";
         return;
     }
-    const { data, error } = await sb.from('posts').select('*').eq('id', postId).single();
-    if(error){
-        console.error(error);
+    try {
+        const { data, error } = await sb.from('posts').select('*').eq('id', postId).single();
+        if(error) throw error;
+        if(!data){
+            document.getElementById('post-title').textContent = "Post not found";
+            document.getElementById('post-content').textContent = "This post may have been deleted.";
+            return;
+        }
+        document.getElementById('post-title').textContent = data.title;
+        document.getElementById('post-date').textContent = new Date(data.created_at).toLocaleDateString();
+        document.getElementById('post-content').textContent = data.content;
+    } catch(error) {
+        console.error('Error:', error);
         document.getElementById('post-title').textContent = "Error loading post";
-        return;
+        document.getElementById('post-content').textContent = error.message;
     }
-    document.getElementById('post-title').textContent = data.title;
-    document.getElementById('post-date').textContent = new Date(data.created_at).toLocaleDateString();
-    document.getElementById('post-content').textContent = data.content;
 }
-
 loadPost();
 </script>
 </body>
