--- a/index.html
+++ b/index.html
@@ -2,16 +2,6 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DYGKTNNN1P"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-DYGKTNNN1P');
-</script>
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ryan's Poetic and Literary Insights - Poetry, Stories & Articles</title>
 <meta name="description" content="Explore Ryan's collection of poetry, literary articles, and creative writing. Discover thought-provoking stories and beautiful poems about life, art, and culture.">
@@ -25,11 +15,69 @@
 <meta property="og:url" content="https://ryangit21.github.io/ryanpoetryandliteraryinsights/">
 
 <style>
-/* Your existing CSS remains untouched */
 *{margin:0;padding:0;box-sizing:border-box}
 body{font-family:'Georgia',serif;background:linear-gradient(135deg,#667eea,#764ba2);color:#333;line-height:1.6;min-height:100vh}
 .container{max-width:1200px;margin:0 auto;padding:20px}
-/* ... rest of your CSS ... */
+header{text-align:center;padding:60px 20px;color:white}
+header h1{font-size:3.5em;margin-bottom:10px;text-shadow:2px 2px 4px rgba(0,0,0,0.3)}
+header p{font-size:1.3em;opacity:0.9}
+nav{display:flex;justify-content:center;gap:20px;margin:30px 0;flex-wrap:wrap}
+.nav-btn{padding:12px 30px;background:rgba(255,255,255,0.2);border:2px solid white;color:white;cursor:pointer;border-radius:30px;transition:all 0.3s ease;font-size:1em}
+.nav-btn:hover{background:rgba(255,255,255,0.3);transform:translateY(-2px)}
+.nav-btn.active{background:white;color:#667eea;font-weight:bold}
+.posts-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(350px,1fr));gap:30px;margin-bottom:60px}
+.post-card{background:white;border-radius:15px;padding:30px;box-shadow:0 10px 30px rgba(0,0,0,0.2);cursor:pointer;transition:transform 0.3s ease,box-shadow 0.3s ease}
+.post-card:hover{transform:translateY(-5px);box-shadow:0 15px 40px rgba(0,0,0,0.3)}
+.post-card h3{color:#667eea;margin-bottom:10px;font-size:1.5em}
+.post-card.poem{font-style:italic;background:linear-gradient(135deg,#ffecd2,#fcb69f);border-left:5px solid #ff6b6b}
+.post-card.article{border-left:5px solid #667eea}
+.post-date{color:#999;font-size:0.9em;margin:10px 0;font-weight:normal}
+.post-excerpt{color:#666;line-height:1.8;margin-top:15px}
+.loading-container{color:white;text-align:center;padding:80px 20px;font-size:1.2em}
+.spinner{border:4px solid rgba(255,255,255,0.3);border-radius:50%;border-top:4px solid white;width:50px;height:50px;animation:spin 1s linear infinite;margin:20px auto}
+@keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
+.empty-state{color:white;text-align:center;padding:80px 20px;font-size:1.2em;background:rgba(255,255,255,0.1);border-radius:15px;margin:20px 0}
+.empty-state h3{font-size:1.8em;margin-bottom:15px}
+footer{background:rgba(0,0,0,0.3);color:white;text-align:center;padding:30px 20px;margin-top:60px}
+footer p{margin:5px 0;opacity:0.9}
+footer a{color:white;text-decoration:none;border-bottom:1px solid rgba(255,255,255,0.5);transition:opacity 0.3s}
+footer a:hover{opacity:0.7}
+.modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.8);z-index:2000;justify-content:center;align-items:center;padding:20px}
+.modal.active{display:flex}
+.modal-content{background:white;padding:40px;border-radius:20px;width:100%;max-width:600px;max-height:90vh;overflow-y:auto}
+.modal-content h2{color:#667eea;margin-bottom:25px;font-size:2em}
+.form-group{margin-bottom:20px}
+.form-group label{font-weight:bold;display:block;margin-bottom:8px;color:#667eea}
+.form-group input,textarea,select{width:100%;padding:12px;border-radius:8px;border:2px solid #ddd;font-family:inherit;font-size:1em;transition:border-color 0.3s}
+.form-group input:focus,textarea:focus,select:focus{outline:none;border-color:#667eea}
+textarea{min-height:200px;resize:vertical}
+.btn-group{display:flex;gap:15px;margin-top:20px;flex-wrap:wrap}
+.btn{padding:15px 30px;border-radius:8px;cursor:pointer;border:none;font-size:1em;transition:all 0.3s ease;font-weight:bold}
+.btn:hover{transform:translateY(-2px);box-shadow:0 5px 15px rgba(0,0,0,0.2)}
+.btn-primary{background:#667eea;color:white}
+.btn-primary:hover{background:#5568d3}
+.btn-secondary{background:#ddd;color:#333}
+.btn-secondary:hover{background:#ccc}
+.btn-danger{background:#e74c3c;color:white}
+.btn-danger:hover{background:#c0392b}
+.admin-btn{position:fixed;top:20px;right:20px;padding:10px 20px;background:rgba(255,255,255,0.2);border:2px solid white;color:white;cursor:pointer;border-radius:25px;z-index:100;transition:all 0.3s ease;font-weight:bold}
+.admin-btn:hover{background:rgba(255,255,255,0.3)}
+.add-post-btn{position:fixed;bottom:40px;right:40px;width:60px;height:60px;background:#667eea;color:white;border-radius:50%;font-size:2em;border:none;cursor:pointer;display:none;z-index:1000;box-shadow:0 5px 20px rgba(0,0,0,0.3);transition:all 0.3s ease}
+.add-post-btn:hover{transform:scale(1.1);background:#5568d3}
+.success,.error{position:fixed;top:20px;left:50%;transform:translateX(-50%);padding:15px 30px;border-radius:8px;color:white;z-index:3000;font-weight:bold;box-shadow:0 5px 20px rgba(0,0,0,0.3);animation:slideDown 0.3s ease}
+.success{background:#2ecc71}
+.error{background:#e74c3c}
+@keyframes slideDown{from{top:-100px;opacity:0}to{top:20px;opacity:1}}
+@media(max-width:768px){
+    header h1{font-size:2.5em}
+    header p{font-size:1.1em}
+    .posts-grid{grid-template-columns:1fr;gap:20px}
+    .post-card{padding:20px}
+    .modal-content{padding:25px}
+    nav{gap:10px}
+    .nav-btn{padding:10px 20px;font-size:0.9em}
+    .add-post-btn{bottom:20px;right:20px;width:50px;height:50px;font-size:1.5em}
+}
 </style>
 </head>
 <body>
@@ -51,20 +99,17 @@ body{font-family:'Georgia',serif;background:linear-gradient(135deg,#667eea,#764b
 </div>
 </main>
 </div>
-
 <footer>
 <p>&copy; 2024 Ryan's Poetic and Literary Insights</p>
 <p>Crafted with ❤️ and words</p>
 <p><a href="mailto:ryanlist35@gmail.com">Contact</a> | <a href="#" onclick="document.getElementById('about-modal').classList.add('active'); return false;">About</a></p>
 </footer>
-
 <div id="admin-modal" class="modal">
 <div class="modal-content">
 <h2 id="modal-title"></h2>
 <div id="modal-body"></div>
 </div>
 </div>
-
 <div id="about-modal" class="modal" onclick="if(event.target===this) this.classList.remove('active')">
 <div class="modal-content">
 <h2>About This Blog</h2>
@@ -72,16 +117,12 @@ body{font-family:'Georgia',serif;background:linear-gradient(135deg,#667eea,#764b
 <button class="btn btn-secondary" style="margin-top:20px;" onclick="document.getElementById('about-modal').classList.remove('active')">Close</button>
 </div>
 </div>
-
 <button id="add-btn" class="add-post-btn" onclick="openAddPost()" aria-label="Add new post">+</button>
-
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const SUPABASE_URL="https://zqmgtnnwrceagkshfapq.supabase.co";
 const SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpxbWd0bm53cmNlYWdrc2hmYXBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY3MDI2ODgsImV4cCI6MjA4MjI3ODY4OH0.Ql5KP6nfOSRzz1Z2eyN6WTqDsfVwZ0e9GKIbePa9eZE";
 const sb=window.supabase.createClient(SUPABASE_URL,SUPABASE_KEY);
-
-/* Your existing JS remains untouched */
 let isAdmin=false;
 let allPosts=[];
 let currentFilter="all";
