--- a/post.html
+++ b/post.html
@@ -3,6 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DYGKTNNN1P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DYGKTNNN1P');
+</script>
+
 <title>Loading... - Ryan's Poetic and Literary Insights</title>
 
 <meta name="description" content="Read this post from Ryan's collection of poetry and literary insights.">
