--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 <link rel="preconnect" href="https://zqmgtnnwrceagkshfapq.supabase.co">
 <link rel="dns-prefetch" href="https://zqmgtnnwrceagkshfapq.supabase.co">
 
-<!-- Critical CSS only - above the fold content -->
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{font-family:'Georgia',serif;background:linear-gradient(135deg,#667eea,#764ba2);color:#333;line-height:1.6;min-height:100vh}
@@ -39,29 +38,26 @@ nav{display:flex;justify-content:center;gap:20px;margin:30px 0;flex-wrap:wrap}
 .nav-btn{padding:12px 30px;background:rgba(255,255,255,0.2);border:2px solid white;color:white;cursor:pointer;border-radius:30px;transition:all 0.3s ease;font-size:1em}
 .nav-btn:hover{background:rgba(255,255,255,0.3);transform:translateY(-2px)}
 .nav-btn.active{background:white;color:#667eea;font-weight:bold}
-.loading-container{color:white;text-align:center;padding:80px 20px;font-size:1.2em}
-.spinner{border:4px solid rgba(255,255,255,0.3);border-radius:50%;border-top:4px solid white;width:50px;height:50px;animation:spin 1s linear infinite;margin:20px auto}
-@keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
-</style>
-
-<!-- Non-critical CSS loaded async -->
-<style>
 .posts-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(350px,1fr));gap:30px;margin-bottom:60px}
 .post-card{background:white;border-radius:15px;padding:30px;box-shadow:0 10px 30px rgba(0,0,0,0.2);cursor:pointer;transition:transform 0.3s ease,box-shadow 0.3s ease;text-decoration:none;color:inherit;display:block}
 .post-card:hover{transform:translateY(-5px);box-shadow:0 15px 40px rgba(0,0,0,0.3)}
 .post-card h3{color:#667eea;margin-bottom:10px;font-size:1.5em}
 .post-card.poem{font-style:italic;background:linear-gradient(135deg,#ffecd2,#fcb69f);border-left:5px solid #ff6b6b}
+.post-card.poem h3{color:#ff6b6b}
 .post-card.article{border-left:5px solid #667eea}
 .post-date{color:#999;font-size:0.9em;margin:10px 0;font-weight:normal}
 .post-excerpt{color:#666;line-height:1.8;margin-top:15px}
+.loading-container{color:white;text-align:center;padding:80px 20px;font-size:1.2em}
+.spinner{border:4px solid rgba(255,255,255,0.3);border-radius:50%;border-top:4px solid white;width:50px;height:50px;animation:spin 1s linear infinite;margin:20px auto}
+@keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
 .empty-state{color:white;text-align:center;padding:80px 20px;font-size:1.2em;background:rgba(255,255,255,0.1);border-radius:15px;margin:20px 0}
 .empty-state h3{font-size:1.8em;margin-bottom:15px}
 footer{background:rgba(0,0,0,0.3);color:white;text-align:center;padding:30px 20px;margin-top:60px}
 footer p{margin:5px 0;opacity:0.9}
 footer a{color:white;text-decoration:none;border-bottom:1px solid rgba(255,255,255,0.5);transition:opacity 0.3s}
 footer a:hover{opacity:0.7}
-.modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.8);z-index:2000;justify-content:center;align-items:center;padding:20px;opacity:0;transition:opacity 0.3s ease}
-.modal.active{display:flex;opacity:1}
+.modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.8);z-index:2000;justify-content:center;align-items:center;padding:20px}
+.modal.active{display:flex}
 .modal-content{background:white;padding:40px;border-radius:20px;width:100%;max-width:600px;max-height:90vh;overflow-y:auto}
 .modal-content h2{color:#667eea;margin-bottom:25px;font-size:2em}
 .form-group{margin-bottom:20px}
@@ -263,7 +259,6 @@ function displayPosts(){
             </a>
         `).join('');
         
-        // Prefetch on hover for instant navigation
         document.querySelectorAll('a[href^="post.html"]').forEach(link=>{
             link.addEventListener('mouseenter',function(){
                 const postId=new URL(this.href).searchParams.get('id');
