--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <meta http-equiv="content-language" content="en-US">
 
 <!-- Canonical URL -->
-<link rel="canonical" href="https://ryangit21.github.io/ryanpoetryandliteraryinsights/">
+<link rel="canonical" href="https://poeticandliteraryinsights.com/">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://ryangit21.github.io/ryanpoetryandliteraryinsights/">
+<meta property="og:url" content="https://poeticandliteraryinsights.com/">
 <meta property="og:title" content="Ryan's Poetic and Literary Insights">
 <meta property="og:description" content="A collection of poetry, stories, and literary articles">
 <meta property="og:site_name" content="Ryan's Poetic and Literary Insights">
@@ -48,7 +48,7 @@
   "@type": "Blog",
   "name": "Ryan's Poetic and Literary Insights",
   "description": "A collection of poetry, stories, and literary articles",
-  "url": "https://ryangit21.github.io/ryanpoetryandliteraryinsights/",
+  "url": "https://poeticandliteraryinsights.com/",
   "author": {
     "@type": "Person",
     "name": "Ryan",
@@ -195,7 +195,7 @@ textarea{min-height:200px;resize:vertical}
 
 <nav class="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList" aria-label="Breadcrumb">
   <span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-    <a itemprop="item" href="https://ryangit21.github.io/ryanpoetryandliteraryinsights/">
+    <a itemprop="item" href="https://poeticandliteraryinsights.com/">
       <span itemprop="name">Home</span>
     </a>
     <meta itemprop="position" content="1">
@@ -375,10 +375,10 @@ function injectStructuredData(){
         "author":{"@type":"Person","name":"Ryan"},
         "publisher":{"@type":"Person","name":"Ryan"},
         "description":post.content.substring(0,150),
-        "url":`https://ryangit21.github.io/ryanpoetryandliteraryinsights/post.html?id=${post.id}`,
+        "url":`https://poeticandliteraryinsights.com/post.html?id=${post.id}`,
         "mainEntityOfPage":{
             "@type":"WebPage",
-            "@id":`https://ryangit21.github.io/ryanpoetryandliteraryinsights/post.html?id=${post.id}`
+            "@id":`https://poeticandliteraryinsights.com/post.html?id=${post.id}`
         },
         "articleBody":post.content.substring(0,500),
         "wordCount":post.content.split(/\s+/).length,
@@ -391,7 +391,7 @@ function injectStructuredData(){
             {
                 "@type":"Blog",
                 "name":"Ryan's Poetic and Literary Insights",
-                "url":"https://ryangit21.github.io/ryanpoetryandliteraryinsights/",
+                "url":"https://poeticandliteraryinsights.com/",
                 "blogPost":blogPosts
             }
         ]
