--- a/post.html
+++ b/post.html
@@ -133,7 +133,7 @@ body{font-family:'Georgia',serif;background:linear-gradient(135deg,var(--bg-grad
 
 <div class="container">
 <nav class="breadcrumb" aria-label="Breadcrumb">
-  <a href="index.html">← Back to Home</a>
+  <a href="https://poeticandliteraryinsights.com/">← Back to Home</a>
 </nav>
 
 <main id="post-container">
@@ -196,7 +196,7 @@ body{font-family:'Georgia',serif;background:linear-gradient(135deg,var(--bg-grad
 <div id="comments-list"></div>
 </section>
 
-<a href="index.html" class="back-btn" id="back-btn" style="display:none">← Back to All Posts</a>
+<a href="https://poeticandliteraryinsights.com/" class="back-btn" id="back-btn" style="display:none">← Back to All Posts</a>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" async defer></script>
