--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <meta name="author" content="Ryan">
 <meta name="robots" content="index, follow">
 <meta http-equiv="content-language" content="en-US">
+<meta name="google-site-verification" content="gG_nQgnPK8582sxGXlIWrEF7P5q7-jtYZ5MRZUBzwpo" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href="https://poeticandliteraryinsights.com/">
