--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 <meta http-equiv="content-language" content="en-US">
 <meta name="google-site-verification" content="gG_nQgnPK8582sxGXlIWrEF7P5q7-jtYZ5MRZUBzwpo" />
 
+<!-- Favicon Links - Elegant Quill Design -->
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png">
+
 <!-- Canonical URL -->
 <link rel="canonical" href="https://poeticandliteraryinsights.com/">
 
