--- a/post.html
+++ b/post.html
@@ -18,6 +18,14 @@
 <meta name="author" content="Ryan">
 <meta name="robots" content="index, follow">
 
+<!-- Favicon Links - Elegant Quill Design -->
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png">
+
 <link rel="preconnect" href="https://zqmgtnnwrceagkshfapq.supabase.co">
 <link rel="dns-prefetch" href="https://zqmgtnnwrceagkshfapq.supabase.co">
 
